--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -1,6 +1,6 @@
 @import (inline) './reset.css';
 // widget
-#PORTAL_VEMOS_WIDGET {
+#PORTAL_VERA_WIDGET {
   z-index: 999;
   position: fixed;
   left: 0;
@@ -27,7 +27,7 @@
   }
 }
 // invite panel
-#PORTAL_VEMOS_INVITE {
+#PORTAL_VERA_INVITE {
   color: #fff;
   z-index: 999;
   position: fixed;
@@ -69,18 +69,11 @@
   .intro {
     padding: 5px 0;
   }
-  .btn {
-    border: 1px solid #eee;
-    border-radius: 4px;
-    padding: 4px 10px;
-    font-size: 22px;
-    color: #fff;
-    background: transparent;
-    cursor: pointer;
-  }
+
   .cameras {
     border: 1px solid #eee;
     .camera {
+      position: relative;
       width: 200px;
       height: 200px;
       display: flex;
@@ -90,6 +83,19 @@
       video {
         width: 100%;
         height: 100%;
+      }
+      .btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0);
+        border: 1px solid #eee;
+        border-radius: 4px;
+        padding: 4px 10px;
+        font-size: 22px;
+        color: #fff;
+        background: transparent;
+        cursor: pointer;
       }
     }
   }
