--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -181,17 +181,17 @@ table {
   border-radius: 50%;
 }
 #PORTAL_VERA_INVITE[data-status='open']:after {
-  background-color: #48ba2b;
+  background-color: #ee7f3d;
 }
 #PORTAL_VERA_INVITE[data-status='connected']:after {
-  background-color: #ee7f3d;
+  background-color: #48ba2b;
 }
 #PORTAL_VERA_INVITE[data-status='error']:after {
   background-color: #d7322d;
 }
 #PORTAL_VERA_INVITE > .title {
   padding: 5px;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   font-size: 24px;
   font-weight: 800;
   color: #eee;
@@ -200,26 +200,32 @@ table {
   padding: 5px 0;
 }
 #PORTAL_VERA_INVITE .cameras {
-  border: 1px solid #eee;
+  overflow: hidden;
 }
 #PORTAL_VERA_INVITE .cameras .camera {
+  border-radius: 10px;
   position: relative;
   width: 200px;
-  height: 200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 5px;
+  border: 1px solid #eee;
 }
-#PORTAL_VERA_INVITE .cameras .camera video {
+#PORTAL_VERA_INVITE .cameras .camera:not(:last-child) {
+  margin-bottom: 5px;
+}
+#PORTAL_VERA_INVITE .cameras .camera .video video {
   width: 100%;
   height: 100%;
+  max-height: 200px;
 }
 #PORTAL_VERA_INVITE .cameras .camera .btn {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -60%, 0);
   border: 1px solid #eee;
   border-radius: 4px;
   padding: 4px 10px;
@@ -227,4 +233,30 @@ table {
   color: #fff;
   background: transparent;
   cursor: pointer;
+}
+#PORTAL_VERA_INVITE .cameras .camera .controls {
+  width: 100%;
+  margin-top: 5px;
+  border-top: 1px dashed #eee;
+  font-size: 13px;
+  display: flex;
+  padding: 5px 8px;
+}
+#PORTAL_VERA_INVITE .cameras .camera .controls .control {
+  border: 1px solid #eee;
+  border-radius: 4px;
+  padding: 2px 6px;
+  font-size: 12px;
+  color: #fff;
+  background: transparent;
+  cursor: pointer;
+}
+#PORTAL_VERA_INVITE .cameras .camera .controls .control:not(:last-child) {
+  margin-right: 4px;
+}
+#PORTAL_VERA_INVITE .cameras .camera[camera-status='connected'] .btn {
+  display: none;
+}
+#PORTAL_VERA_INVITE .cameras .camera[camera-status='connected'] .controls {
+  visibility: visible;
 }
