--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -50,10 +50,10 @@
     border-radius: 50%;
   }
   &[data-status='open']:after {
-    background-color: #48ba2b;
+    background-color: #ee7f3d;
   }
   &[data-status='connected']:after {
-    background-color: #ee7f3d;
+    background-color: #48ba2b;
   }
   &[data-status='error']:after {
     background-color: #d7322d;
@@ -61,7 +61,7 @@
   > .title {
     padding: 5px;
     font-weight: 800;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     font-size: 24px;
     font-weight: 800;
     color: #eee;
@@ -71,24 +71,34 @@
   }
 
   .cameras {
-    border: 1px solid #eee;
+    // border: 1px solid #eee;
+    overflow: hidden;
     .camera {
+      border-radius: 10px;
       position: relative;
       width: 200px;
-      height: 200px;
+      // height: 200px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 5px;
-      video {
-        width: 100%;
-        height: 100%;
+      border: 1px solid #eee;
+      &:not(:last-child) {
+        margin-bottom: 5px;
+      }
+      .video {
+        video {
+          width: 100%;
+          height: 100%;
+          max-height: 200px;
+        }
       }
       .btn {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate3d(-50%, -50%, 0);
+        transform: translate3d(-50%, -60%, 0);
         border: 1px solid #eee;
         border-radius: 4px;
         padding: 4px 10px;
@@ -97,6 +107,41 @@
         background: transparent;
         cursor: pointer;
       }
+      .controls {
+        // visibility: hidden;
+        width: 100%;
+        margin-top: 5px;
+        border-top: 1px dashed #eee;
+        // border-bottom: 1px solid #eee;
+        font-size: 13px;
+        display: flex;
+        padding: 5px 8px;
+        .control {
+          border: 1px solid #eee;
+          border-radius: 4px;
+          padding: 2px 6px;
+          font-size: 12px;
+          color: #fff;
+          background: transparent;
+          cursor: pointer;
+          &:not(:last-child) {
+            margin-right: 4px;
+          }
+        }
+      }
+      &[camera-status='connected'] {
+        .btn {
+          display: none;
+        }
+        .controls {
+          visibility: visible;
+        }
+      }
+      // &[camera-status='connected'] {
+      //   .btn.copy {
+      //     display: none;
+      //   }
+      // }
     }
   }
 }
