--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -1,246 +1,5 @@
-@import (inline) './reset.css';
+@import (inline) './style/reset.css';
 // widget
-#PORTAL_VERA_WIDGET {
-  cursor: pointer;
-  z-index: 999;
-  position: fixed;
-  left: 0;
-  bottom: 10px;
-  width: 60px;
-  height: 50px;
-  background-color: #5c46e3;
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-  padding: 5px;
-  transition: all 0.5s ease-in;
-  transform: translateX(-20px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  &:hover {
-    transform: translateX(-5px);
-  }
-  .btn {
-    width: 40px;
-    height: 40px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/logo.png');
-    background-size: cover;
-  }
-}
+@import './style/widget.less';
 // invite panel
-#PORTAL_VERA_INVITE {
-  color: #fff;
-  z-index: 999;
-  position: fixed;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  min-width: 100px;
-  min-height: 200px;
-  background-color: #5c46e3;
-  padding: 15px 10px;
-  &[data-status]:after {
-    content: '';
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    display: block;
-    width: 10px;
-    height: 10px;
-    background-color: #999;
-    border-radius: 50%;
-  }
-  &[data-status='open']:after {
-    background-color: #ee7f3d;
-  }
-  &[data-status='connected']:after {
-    background-color: #48ba2b;
-  }
-  &[data-status='error']:after {
-    background-color: #d7322d;
-  }
-  > .close {
-    cursor: pointer;
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    opacity: 0.4;
-    &:hover {
-      opacity: 1;
-    }
-    &:before,
-    &:after {
-      position: absolute;
-      left: 8px;
-      content: ' ';
-      height: 14px;
-      width: 2px;
-      background-color: #df0f17;
-    }
-
-    &:before {
-      transform: rotate(45deg);
-    }
-    &:after {
-      transform: rotate(-45deg);
-    }
-  }
-  > .title {
-    padding: 5px;
-    font-weight: 800;
-    padding-bottom: 10px;
-    font-size: 24px;
-    font-weight: 800;
-    color: #eee;
-  }
-  .intro {
-    padding: 5px 0;
-  }
-
-  .cameras {
-    // border: 1px solid #eee;
-    overflow: hidden;
-    .camera {
-      border-radius: 8px;
-      position: relative;
-      width: 200px;
-      // height: 200px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 5px;
-      border: 1px solid #eee;
-      &:not(:last-child) {
-        margin-bottom: 10px;
-      }
-      &[bg-rm-status='processing']{
-        .processing{
-          display: block;
-        }
-      }
-      &[bg-rm-status='ready']{
-        .processing{
-          display: none;
-        }
-        .video video{
-          visibility: hidden;
-        }
-      }
-      .processing{
-        display: none;
-        z-index: 10;
-        text-transform: capitalize;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%, -70%, 0);
-        padding: 10px;
-        border-radius: 5px;
-        background-color: #5c46e3;
-        font-size: 22px;
-        color: #fff;
-      }
-      .video {
-        position: relative;
-        .opts{
-          visibility:hidden;
-          z-index: 11;
-          position: absolute;
-          right:5px;
-          top:5px;
-          padding:5px;
-          display: flex;
-          .opt{
-            opacity: .3;
-            border: 1px solid #eee;
-            border-radius: 4px;
-            padding: 2px 8px;
-            font-size: 10px;
-            color: #fff;
-            background: transparent;
-            cursor: pointer;
-             &:not(:last-child) {
-              margin-right: 6px;
-            }
-            &:hover{
-              opacity: 1;
-            }
-          }
-        }
-        video {
-          width: 200px;
-          height: 200px;
-        }
-        canvas{
-           z-index: 9;
-          width:200px;
-          height:200px;
-          position: absolute;
-          left:0;
-          top:0;
-          &.side{
-            display: none;
-          }
-        }
-      }
-      .btn {
-        z-index: 11;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%, -60%, 0);
-         border: 1px solid #eee;
-        border-radius: 4px;
-        padding: 4px 10px;
-        font-size: 22px;
-        color: #fff;
-        background: transparent;
-        cursor: pointer;
-
-      }
-      .controls {
-        visibility: hidden;
-        width: 100%;
-        margin-top: 5px;
-        border-top: 1px dashed #eee;
-        // border-bottom: 1px solid #eee;
-        font-size: 13px;
-        display: flex;
-        padding: 5px 8px;
-        .control {
-          border: 1px solid #eee;
-          border-radius: 4px;
-          padding: 2px 6px;
-          font-size: 12px;
-          color: #fff;
-          background: transparent;
-          cursor: pointer;
-          &:not(:last-child) {
-            margin-right: 4px;
-          }
-        }
-      }
-      &[camera-status='connected'] {
-        .btn {
-          display: none;
-        }
-        .controls,.opts {
-          visibility: visible;
-        }
-      }
-      // &[camera-status='connected'] {
-      //   .btn.copy {
-      //     display: none;
-      //   }
-      // }
-    }
-  }
-}
+@import './style/invite.less';
