--- a/public/crx/vera/style/invite.css
+++ b/public/crx/vera/style/invite.css
@@ -1,166 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-menu,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section {
-  display: block;
-}
-/* HTML5 hidden-attribute fix for newer browsers */
-*[hidden] {
-  display: none;
-}
-body {
-  line-height: 1;
-}
-menu,
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-#PORTAL_VERA_WIDGET {
-  cursor: pointer;
-  z-index: 999;
-  position: fixed;
-  left: 0;
-  bottom: 10px;
-  width: 60px;
-  height: 50px;
-  background-color: #5c46e3;
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-  padding: 5px;
-  transition: all 0.5s ease-in;
-  transform: translateX(-20px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#PORTAL_VERA_WIDGET:hover {
-  transform: translateX(-5px);
-}
-#PORTAL_VERA_WIDGET .btn {
-  width: 40px;
-  height: 40px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/logo.png');
-  background-size: cover;
-}
 #PORTAL_VERA_INVITE {
   color: #fff;
   z-index: 999;
@@ -170,13 +7,36 @@ table {
   transform: translateY(-50%);
   min-width: 100px;
   min-height: 200px;
-  background-color: #5c46e3;
+  background: transparent;
   padding: 15px 10px;
+  border: 4px solid #5c46e3;
+  transition: all 0.4s ease-in-out;
+}
+#PORTAL_VERA_INVITE:hover {
+  background: #5c46e3;
+}
+#PORTAL_VERA_INVITE:hover .title {
+  color: #eee;
+}
+#PORTAL_VERA_INVITE:hover .cameras .camera {
+  border-color: #eee;
+}
+#PORTAL_VERA_INVITE:hover .cameras .camera .video .opts .opt {
+  color: #fff;
+  border-color: #eee;
+}
+#PORTAL_VERA_INVITE:hover .cameras .camera .controls .control {
+  color: #fff;
+  border-color: #eee;
+}
+#PORTAL_VERA_INVITE:hover .cameras .camera .btn {
+  border: 1px solid #eee;
+  color: #eee;
 }
 #PORTAL_VERA_INVITE[data-status]:after {
   content: '';
   position: absolute;
-  right: 5px;
+  left: 5px;
   top: 5px;
   display: block;
   width: 10px;
@@ -187,6 +47,12 @@ table {
 #PORTAL_VERA_INVITE[data-status='open']:after {
   background-color: #ee7f3d;
 }
+#PORTAL_VERA_INVITE[data-status='close']:after {
+  background-color: #fff;
+}
+#PORTAL_VERA_INVITE[data-status='disconnected']:after {
+  background-color: #ccc;
+}
 #PORTAL_VERA_INVITE[data-status='connected']:after {
   background-color: #48ba2b;
 }
@@ -196,38 +62,24 @@ table {
 #PORTAL_VERA_INVITE > .close {
   cursor: pointer;
   position: absolute;
-  left: 5px;
+  right: 5px;
   top: 5px;
   display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  opacity: 0.4;
+  width: 25px;
+  height: 25px;
+  opacity: 0.8;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/tel.svg');
+  background-size: cover;
 }
 #PORTAL_VERA_INVITE > .close:hover {
   opacity: 1;
-}
-#PORTAL_VERA_INVITE > .close:before,
-#PORTAL_VERA_INVITE > .close:after {
-  position: absolute;
-  left: 8px;
-  content: ' ';
-  height: 14px;
-  width: 2px;
-  background-color: #df0f17;
-}
-#PORTAL_VERA_INVITE > .close:before {
-  transform: rotate(45deg);
-}
-#PORTAL_VERA_INVITE > .close:after {
-  transform: rotate(-45deg);
 }
 #PORTAL_VERA_INVITE > .title {
   padding: 5px;
   padding-bottom: 10px;
   font-size: 24px;
   font-weight: 800;
-  color: #eee;
+  color: #5c46e3;
 }
 #PORTAL_VERA_INVITE .intro {
   padding: 5px 0;
@@ -244,7 +96,7 @@ table {
   align-items: center;
   justify-content: center;
   padding: 5px;
-  border: 1px solid #eee;
+  border: 1px dashed #5c46e3;
 }
 #PORTAL_VERA_INVITE .cameras .camera:not(:last-child) {
   margin-bottom: 10px;
@@ -285,13 +137,13 @@ table {
   display: flex;
 }
 #PORTAL_VERA_INVITE .cameras .camera .video .opts .opt {
-  opacity: .3;
-  border: 1px solid #eee;
+  opacity: 0.5;
+  border: 1px solid #5c46e3;
   border-radius: 4px;
   padding: 2px 8px;
   font-size: 10px;
   color: #fff;
-  background: transparent;
+  background: #5c46e3;
   cursor: pointer;
 }
 #PORTAL_VERA_INVITE .cameras .camera .video .opts .opt:not(:last-child) {
@@ -321,30 +173,30 @@ table {
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -60%, 0);
-  border: 1px solid #eee;
+  border: 1px solid #5c46e3;
+  background-color: #5c46e3;
+  color: #fff;
   border-radius: 4px;
   padding: 4px 10px;
   font-size: 22px;
-  color: #fff;
-  background: transparent;
   cursor: pointer;
 }
 #PORTAL_VERA_INVITE .cameras .camera .controls {
   visibility: hidden;
   width: 100%;
   margin-top: 5px;
-  border-top: 1px dashed #eee;
+  border-top: 1px dashed #5c46e3;
   font-size: 13px;
   display: flex;
   padding: 5px 8px;
 }
 #PORTAL_VERA_INVITE .cameras .camera .controls .control {
-  border: 1px solid #eee;
+  border: 1px solid #5c46e3;
+  background-color: #5c46e3;
   border-radius: 4px;
   padding: 2px 6px;
   font-size: 12px;
   color: #fff;
-  background: transparent;
   cursor: pointer;
 }
 #PORTAL_VERA_INVITE .cameras .camera .controls .control:not(:last-child) {
