--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -249,19 +249,23 @@ table {
 #PORTAL_VERA_INVITE .intro {
   padding: 5px 0;
 }
+#PORTAL_VERA_INVITE .intro > .title {
+  font-size: 24px;
+}
 #PORTAL_VERA_INVITE .cameras {
   overflow: hidden;
 }
 #PORTAL_VERA_INVITE .cameras .camera {
   border-radius: 8px;
   position: relative;
-  width: 200px;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 5px;
   border: 1px dashed #5c46e3;
+  background: none;
 }
 #PORTAL_VERA_INVITE .cameras .camera:not(:last-child) {
   margin-bottom: 10px;
@@ -308,13 +312,15 @@ table {
   display: flex;
 }
 #PORTAL_VERA_INVITE .cameras .camera .video .opts .opt {
-  opacity: 0.5;
+  opacity: 0.6;
   border: 1px solid #5c46e3;
   border-radius: 4px;
-  padding: 2px 8px;
-  font-size: 10px;
-  color: #fff;
-  background: #5c46e3;
+  background-color: #5c46e3;
+  height: 22px !important;
+  width: 22px !important;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
   cursor: pointer;
 }
 #PORTAL_VERA_INVITE .cameras .camera .video .opts .opt:not(:last-child) {
@@ -322,6 +328,30 @@ table {
 }
 #PORTAL_VERA_INVITE .cameras .camera .video .opts .opt:hover {
   opacity: 1;
+}
+#PORTAL_VERA_INVITE .cameras .camera .video .opts .opt.bg {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video .opts .opt.video {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video .opts .opt.audio {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video .opts .opt.pin {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video[bg-remove='true'] .opts .opt.bg {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video[invisible='true'] .opts .opt.video {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video[muted='true'] .opts .opt.audio {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video[pin='true'] .opts .opt.pin {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.off.svg');
 }
 #PORTAL_VERA_INVITE .cameras .camera .video video {
   width: 200px;
@@ -338,6 +368,21 @@ table {
 #PORTAL_VERA_INVITE .cameras .camera .video canvas.side {
   display: none;
 }
+#PORTAL_VERA_INVITE .cameras .camera .video .user_mask {
+  display: none;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-size: 45%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/user.svg');
+}
+#PORTAL_VERA_INVITE .cameras .camera .video[invisible='true'] .user_mask {
+  display: block;
+}
 #PORTAL_VERA_INVITE .cameras .camera .btn {
   z-index: 11;
   position: absolute;
@@ -351,27 +396,6 @@ table {
   padding: 4px 10px;
   font-size: 22px;
   cursor: pointer;
-}
-#PORTAL_VERA_INVITE .cameras .camera .controls {
-  visibility: hidden;
-  width: 100%;
-  margin-top: 5px;
-  border-top: 1px dashed #5c46e3;
-  font-size: 13px;
-  display: flex;
-  padding: 5px 8px;
-}
-#PORTAL_VERA_INVITE .cameras .camera .controls .control {
-  border: 1px solid #5c46e3;
-  background-color: #5c46e3;
-  border-radius: 4px;
-  padding: 2px 6px;
-  font-size: 12px;
-  color: #fff;
-  cursor: pointer;
-}
-#PORTAL_VERA_INVITE .cameras .camera .controls .control:not(:last-child) {
-  margin-right: 4px;
 }
 #PORTAL_VERA_INVITE .cameras .camera[camera-status='connected'] .btn {
   display: none;
