--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -1,13 +1,14 @@
 .camera {
   border-radius: 8px;
   position: relative;
-  width: 200px;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 5px;
   border: 1px dashed #5c46e3;
+  background: none;
 }
 .camera:not(:last-child) {
   margin-bottom: 10px;
@@ -54,13 +55,15 @@
   display: flex;
 }
 .camera .video .opts .opt {
-  opacity: 0.5;
+  opacity: 0.6;
   border: 1px solid #5c46e3;
   border-radius: 4px;
-  padding: 2px 8px;
-  font-size: 10px;
-  color: #fff;
-  background: #5c46e3;
+  background-color: #5c46e3;
+  height: 22px !important;
+  width: 22px !important;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
   cursor: pointer;
 }
 .camera .video .opts .opt:not(:last-child) {
@@ -68,6 +71,30 @@
 }
 .camera .video .opts .opt:hover {
   opacity: 1;
+}
+.camera .video .opts .opt.bg {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
+}
+.camera .video .opts .opt.video {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
+}
+.camera .video .opts .opt.audio {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
+}
+.camera .video .opts .opt.pin {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.svg');
+}
+.camera .video[bg-remove='true'] .opts .opt.bg {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
+}
+.camera .video[invisible='true'] .opts .opt.video {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
+}
+.camera .video[muted='true'] .opts .opt.audio {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
+}
+.camera .video[pin='true'] .opts .opt.pin {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.off.svg');
 }
 .camera .video video {
   width: 200px;
@@ -84,6 +111,21 @@
 .camera .video canvas.side {
   display: none;
 }
+.camera .video .user_mask {
+  display: none;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-size: 45%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/user.svg');
+}
+.camera .video[invisible='true'] .user_mask {
+  display: block;
+}
 .camera .btn {
   z-index: 11;
   position: absolute;
@@ -97,27 +139,6 @@
   padding: 4px 10px;
   font-size: 22px;
   cursor: pointer;
-}
-.camera .controls {
-  visibility: hidden;
-  width: 100%;
-  margin-top: 5px;
-  border-top: 1px dashed #5c46e3;
-  font-size: 13px;
-  display: flex;
-  padding: 5px 8px;
-}
-.camera .controls .control {
-  border: 1px solid #5c46e3;
-  background-color: #5c46e3;
-  border-radius: 4px;
-  padding: 2px 6px;
-  font-size: 12px;
-  color: #fff;
-  cursor: pointer;
-}
-.camera .controls .control:not(:last-child) {
-  margin-right: 4px;
 }
 .camera[camera-status='connected'] .btn {
   display: none;
